2011-09-14  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* util/delay.h.in: Fall back to the historic algorithm when
	compiling within a freestanding environment.

2011-05-23  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	Reported by Heike C. Zimmerer:
	patch #7362: iom16a.h: USART vectors inconsistently named
	for ATmega16A
	* include/avr/iom16a.h: Add backwards-compatible USART
	interrupt vector names.

2011-05-23  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	Reported by Palauqui Georges:
	patch #7531: Bad name of bit in TCCR0A : WGM0 instead of CTC0
	for ATtinyX61
	* include/avr/iotnx61.h: Add new name CTC0 for bit 0 of
	TCCR0A.

2011-05-14  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	Reported by Markus Lampert:
	* include/avr/iousbxx2.h: Add new names for CLKSTA, CLKSEL0,
	CLKSEL1 (old names have been without the `L').

2011-05-12  Eric B. Weddington  <eric.weddington@atmel.com>

	Patch #7226. Thanks to Avik Juneja for the patch.
	* include/avr/iom8u2.h: Add UPOE register definition and bits.
	* include/avr/power.h: Add ATmega8u2-16u2-32u2 devices in conditional.
	* NEWS: Add to contributed patches list.

2011-05-11  Eric B. Weddington  <eric.weddington@atmel.com>

	Fix for bug #33130. Thanks to Antoine Mercier-Linteau for the patch.
	* doc/examples/twitest/twitest.c: Check for reception of NAK.

2011-05-11  Eric B. Weddington  <eric.weddington@atmel.com>

	Fix for bug #32650.
	* include/util/delay.h.in: Add math.h to list of includes.
	* NEWS: Add to fixed bug list.

2011-05-11  Eric B. Weddington  <eric.weddington@atmel.com>

	Fix for bug #32675.
	* include/avr/power.h: Add TIM1 to power_all_enable() and
	power_all_disable().
	* NEWS: Add to fixed bug list.

2011-05-11  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* include/avr/pgmspace.h: Reorder so __strlen_P is declared by
	the time it is attempted to be used.
	* libc/stdlib/dtostre.c: Part #2 of fix for bug #32988: make
	`s' a `const char *' as it is pointing to a constant (flash)
	string.
