@@ -1,5 +1,10 @@
 2011-09-14  Joerg Wunsch <j.gnu@uriah.heep.sax.de>
 
+	bug #34047: missing math.h include in delay.h
+	* util/delay.h.in: include <math.h>
+
+2011-09-14  Joerg Wunsch <j.gnu@uriah.heep.sax.de>
+
 	* util/delay.h.in: Fall back to the historic algorithm when
 	compiling within a freestanding environment.
 
